[gd_scene load_steps=9 format=2]

[ext_resource path="res://CommControl.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/music/mscTitle.mp3" type="AudioStream" id=2]
[ext_resource path="res://scripts/main/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://mnr_theme.tres" type="Theme" id=4]
[ext_resource path="res://MATCHUPPRO.TTF" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 960.0
margin_bottom = 540.0
color = Color( 0.635294, 0.862745, 0.780392, 1 )

[node name="CreatePolygonTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 20

[node name="TransitionFadeOut" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_right = 960.0
margin_bottom = 540.0

[node name="AudioBGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0
autoplay = true

[node name="AudioSFX" type="AudioStreamPlayer" parent="."]

[node name="HighScore" type="Label" parent="."]
margin_left = 304.0
margin_top = 480.0
margin_right = 673.0
margin_bottom = 518.0
theme = ExtResource( 4 )
text = "MAIOR PONTUAÇÂO: XX"

[node name="Credits" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0
color = Color( 0, 0, 0, 0.470588 )

[node name="Label" type="Label" parent="Credits"]
margin_left = 320.0
margin_top = 120.0
margin_right = 640.0
margin_bottom = 500.0
rect_pivot_offset = Vector2( 160, 50 )
theme = SubResource( 3 )
text = "Square Sum:
Gameficação no Ensino Utilizando Sensores

Jogo desenvolvido para a Mostra Nacional de Robótica 2023.

Desenvolvido por:
Lívia Tainá Alves de Brito
Luis Felipe dos Santos Patrocinio
Ryan Faustino Carvalho

Músicas:
Stars Don't Twinkle - Level27
The Club Entrance - Level27

Labiras - IFPI"
align = 1
valign = 1
autowrap = true

[node name="SquareSum" type="Label" parent="."]
margin_top = 90.0
margin_right = 960.0
margin_bottom = 186.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
text = "SQUARE SUM"
align = 1

[node name="CommControl" parent="." instance=ExtResource( 1 )]

[node name="Buttons" type="Node2D" parent="."]

[connection signal="timeout" from="CreatePolygonTimer" to="." method="_on_CreatePolygonTimer_timeout"]
